--- a/popup.html
+++ b/popup.html
@@ -7,9 +7,10 @@
 
   <!-- <button type="button" onclick="myFunction()" >Click Me!</button> -->
   
-  <button type="button" id="mybutton" >Click Me!</button>
+  <button type="button" id="mybutton" >Clear</button>
 
-  <div>Search Bookmarks: <input id="search"></div>
+  <!-- <div>Search Bookmarks: <input id="search"></div> -->
+  <div id="bookmarks1"></div>
   <div id="bookmarks"></div>
   <div id="editdialog"></div>
   <div id="deletedialog"></div>
